--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "@types/react-document-meta": "^3.0.5",
     "react": "^19.1.0",
+    "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.6.0",
