--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "@types/react-document-meta": "^3.0.5",
+    "motion": "^12.12.2",
     "react": "^19.1.0",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^19.1.0",
